canary-traffic/rollouts-traffic-stable-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-traffic-canary
  namespace: demo
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-traffic-demo
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-traffic-stable
  namespace: demo
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: rollouts-traffic-demo
